--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,14 @@
-<!DOCTYPE>
-<?php $link = 'http://google.com' ?>
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Типичная страница</title>
+        <meta charset = "utf-8">
+    </head>
+    <body>
+    
+<?php $link = 'http://google.com' ?>
 <p>qwe<p>
-  <a href="<?php echo $link;?>>ссылка</a>
+  <a href="<?php echo $link ?>>ссылка</a>
 </html>
+    </body>
+
