--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     
 <?php $link = 'http://google.com' ?>
 <p>qwe<p>
-  <a href="<?php echo $link ?>>ссылка</a>
+  <a href="<?php echo $link ?>">ссылка</a>
  </body>
 </html>
 
