--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
     
-<?php $link = 'http://google.com' ?>
+
 <p>qwe<p>
-  <a href="<?php echo $link ?>">ссылка</a>
+  <a href="<?php echo "http://google.com/"?>">ссылка</a>
  </body>
 </html>
