--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     
 
 <p>qwe<p>
-  <a href="<?php echo "http://google.com/"?>">ссылка</a>
+  <?php 
+$link = "https://google.com";
+<a href="$link">ссылк</a>
+?>
  </body>
 </html>
